--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,6 +72,9 @@
 } */
 
 /* Navbar Styles */
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
 .navbar {
     background: #fff;
     padding: 15px 5%;
@@ -152,6 +155,7 @@
 
 .cart-btn i {
     font-size: 18px;
+    
 }
 
 .cart-btn[data-count]:after {
@@ -170,7 +174,8 @@
 }
 
 .cart-btn:hover {
-    background: #e9ecef;
+    background: #fff;
+    color: #ff4757;
 }
 
 .login-btn {
